err/cyflib.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cyflib'...
Listing './lib/python3.5/site-packages/cyflib/packages'...
Listing './lib/python3.5/site-packages/cyflib/packages/ecdsa'...
Compiling './lib/python3.5/site-packages/cyflib/packages/ecdsa/ecdsa.py'...
***   File "./lib/python3.5/site-packages/cyflib/packages/ecdsa/ecdsa.py", line 85
    raise RuntimeError, "Generator point must have order."
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cyflib/packages/ecdsa/ellipticcurve.py'...
***   File "./lib/python3.5/site-packages/cyflib/packages/ecdsa/ellipticcurve.py", line 111
    result = 1L
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cyflib/packages/ecdsa/numbertheory.py'...
***   File "./lib/python3.5/site-packages/cyflib/packages/ecdsa/numbertheory.py", line 174
    raise RuntimeError, "Shouldn't get here."
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cyflib/packages/ecdsa/test_pyecdsa.py'...
***   File "./lib/python3.5/site-packages/cyflib/packages/ecdsa/test_pyecdsa.py", line 79
    print "%s: siglen=%d, keygen=%0.3fs, sign=%0.3f, verify=%0.3f" \
                                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/cyflib/progressbar.py'...
***   File "./lib/python3.5/site-packages/cyflib/progressbar.py", line 25
    print self.build_barra(), "\r",
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cyflib-1.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
Listing './txt'...
